assets/css/main.css
/* ... */
@media screen and (max-width: 567px) {
  h1 {
    font-size: 32px;
  }
  h2 {
    font-size: 28px;
  }
  .menu-toggle {
    right: 15px;
  }
  .max-width-450 {
    width: auto;
  }
  .max-width-600 {
    width: auto;
  }
  .section {
    padding-left: 0;
    padding-right: 0;
  }
  .home {
    padding: 0;
    background-position: unset !important;
  }
  .home .banner h1.cd-headline {
    font-size: 32px;
  }
  .my-info {
    display: none;
  }
  .about .details .info li {
    width: 100%;
  }
  .testimonials .item .content .data {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
  }
  .testimonials .item {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
  }
  .testimonials .item .image {
    margin-top: 6px;
  }
  .testimonials .item .image img {
    margin-top: 0px;
  }
  .testimonials .item .content {
    margin-top: -40px;
    padding-top: 75px;
    text-align: center;
  }
  .blog-single .content h3 {
    font-size: 24px;
  }
  .blog-single .content,
  .blog .item .content {
    margin: 15px 0 0 0;
  }
  .work-single .details .g-listes {
    -webkit-box-align: start;
        -ms-flex-align: start;
            align-items: flex-start;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
  }
  .work-single .details .g-listes .liste:last-child {
    margin-left: 0;
  }
}

@media screen and (max-width: 320px) {
  .about .timeline .item .content {
    padding-left: 30px;
  }
  .testimonials .item .content .author span {
    display: block;
  }
  .testimonials .item .content .author .dot {
    display: none;
  }
  .testimonials .item .content .author:after {
    display: none;
  }
}

/* ------------------------------
		 Dark
------------------------------ */
.dark {
  background-color: #0b0c10;
  color: rgba(255, 255, 255, 0.8);
}

.dark h1, .dark h2, .dark h3, .dark h4, .dark h5, .dark h6,
.dark .about .details .info li span,
.dark .blog-single .quote p,
.dark .contact .contact-info .item p:first-child,
.dark .blog .item .content h5 a,
.dark .work-single .details .g-listes .liste li span {
  color: #ffffff;
}

.dark .about .features .item .icon i,
.dark .my-info .item p:last-child,
.dark .home .banner p,
.dark .nav-link,
.dark .home .social-home i,
.dark .home .banner h6,
.dark .social-footer i,
.dark .my-info .item p:first-child,
.dark .work-single .details .g-listes .liste li a,
.dark .about .features .item p {
  color: rgba(255, 255, 255, 0.8);
}

.dark .about .features .item,
.dark .services .item,
.dark .works .item,
.dark .testimonials .item .content,
.dark .blog .item .content,
.dark .form,
.dark .social-footer a,
.dark .testimonials .owl-dot span,
.dark .blog-single .content,
.dark .about .timeline {
  background-color: #17181D;
  -webkit-box-shadow: none;
          box-shadow: none;
}

.dark .header-left,
.dark .loading,
.dark .blog-single .quote,
.dark .blog-single .bottom .social-media a,
.dark .blog-single .bottom .tags ul li,
.dark .testimonials .item .image:after {
  background-color: #0b0c10;
}

.dark .header-left {
  border-right: 1px solid #17181D;
}

.dark .about .hero,
.dark .services .item:hover .circle {
  border: 1px solid #17181D;
}

.dark .form .form-control {
  border: 1px solid #0b0c10;
}

.dark .text-muted {
  color: rgba(255, 255, 255, 0.7) !important;
}

.dark .text-dark {
  color: rgba(255, 255, 255, 0.8) !important;
}

.dark a {
  color: rgba(255, 255, 255, 0.8);
}

.dark .bg-light {
  background-color: #17181D !important;
}

@media screen and (max-width: 768px) {
  .dark .header-left .main-menu {
    background-color: #0b0c10;
  }
}

.btn-custom.twitter-btn {
  background-color: #1b95e0;
}

.icon img {
  width: 35px;
}
.list-inline.social li a {
  display: block;
}
.list-inline li a img {
  width: 22px;
}


/******************************
 *  Accordion Style CSS  *
******************************/
.accordion-box {
  position: relative;
  list-style: none;
  width: 100%;
}

.accordion-box .block{
  position: relative;
  margin-bottom:20px;
/*  box-shadow: #101010 2px 2px 6px, #3e3b3b -2px -2px 6px;*/
  border-radius: 5px;
}

.accordion-box .block.active-block{
  /*box-shadow:0px 0px 25px rgba(0,0,0,0.15);*/
}

.accordion-box .block .acc-btn {
  /*box-shadow: #101010 2px 2px 6px, #3e3b3b -2px -2px 6px;*/
  border-radius: 5px;
  position: relative;
  font-size: 18px;
  cursor: pointer;
  line-height: 30px;
  font-family: "Muli", sans-serif;
  color: #ffffff;
  font-weight: 600;
  padding: 19px 50px 19px 35px;
  transition: all 500ms ease;
  -ms-transition: all 500ms ease;
  -o-transition: all 500ms ease;
  -moz-transition: all 500ms ease;
  -webkit-transition: all 500ms ease;
  background-color: #17181D;
  color: #58CF90;
  /*text-transform: uppercase;*/
  font-size: 24px;
}

.accordion-box .block .acc-btn.active {
}
.accordion-box .block .icon-outer{
  position:absolute;
  right:20px;
  top:18px;
  font-size:20px;
  color: #262626;
  transition:all 500ms ease;
  -moz-transition:all 500ms ease;
  -webkit-transition:all 500ms ease;
  -ms-transition:all 500ms ease;
  -o-transition:all 500ms ease;
}
.accordion-box .block .icon-outer .icon{
  position: absolute;
  right: 0px;
  width:30px;
  height:30px;
  color:#ffffff;
  font-size: 14px;
  text-align: center;
  line-height:32px;
  background-color:#58CF90;
}

.accordion-box .block .icon-outer .fa-plus{
  opacity:1;
}

.accordion-box .block .icon-outer .fa-minus{
  opacity:0;
}

.accordion-box .block .acc-btn.active .icon-outer .fa-minus{
  opacity:1;
}

.accordion-box .block .acc-btn.active .icon-outer .fa-plus{
  opacity:0;
}

.accordion-box .block .acc-content{
  position:relative;
  display:none;
}

.accordion-box .block .acc-content .content-text{
  padding-bottom:6px;
}

.accordion-box .block .acc-content.current{
  display:block;  
}
/* ... */

